--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,17 +26,9 @@ jobs:
         pip install pyinstaller
     
     - name: Build executable
+      shell: pwsh
       run: |
-        pyinstaller --noconfirm --onefile --windowed `
-          --name "BFFNT_Font_Editor" `
-          --add-data "i18n;i18n" `
-          --hidden-import "PyQt6.QtCore" `
-          --hidden-import "PyQt6.QtGui" `
-          --hidden-import "PyQt6.QtWidgets" `
-          --hidden-import "PIL" `
-          --hidden-import "PIL.Image" `
-          --hidden-import "numpy" `
-          main.py
+        pyinstaller --noconfirm --onefile --windowed --name "BFFNT_Font_Editor" --add-data "i18n;i18n" --hidden-import "PyQt6.QtCore" --hidden-import "PyQt6.QtGui" --hidden-import "PyQt6.QtWidgets" --hidden-import "PIL" --hidden-import "PIL.Image" --hidden-import "numpy" main.py
     
     - name: Upload artifact
       uses: actions/upload-artifact@v4
