--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-reversebox>=2.0.0
 Pillow>=10.0.0
 PyQt6>=6.5.0
-numpy>=1.24.0  # Optional but recommended for faster texture decoding
+numpy>=1.24.0
